# beetroot

./: .gitignore  LICENSE  co_nowego.md  features.md  manual.md  plany  readme.md  readme_pl.md  serialbox2  targets.cmake.example  todo
cmake/: beetroot.cmake  beetroot_boilerplate.cmake  beetroot_bootstrap.cmake  beetroot_data_def.cmake  beetroot_debug.cmake  beetroot_dependency_processing.cmake  beetroot_dump.cmake  beetroot_external_target.cmake  beetroot_finalize.cmake  beetroot_get_target.cmake  beetroot_global_storage.cmake  beetroot_global_storage_misc.cmake  beetroot_ids.cmake  beetroot_messages.cmake  beetroot_misc.cmake  beetroot_missing_languages.cmake  beetroot_parse_variables.cmake  beetroot_reading_targets.cmake  beetroot_storage.cmake  beetroot_variables_misc.cmake  build_install_prefix.cmake  burak.cmake  burak_cmake_overrides.cmake  burak_data_def.cmake  burak_dependency_processing.cmake  burak_external_target.cmake  burak_finalize.cmake  burak_get_target.cmake  burak_global_storage.cmake  burak_global_storage_misc.cmake  burak_ids.cmake  burak_messages.cmake  burak_misc.cmake  burak_parse_variables.cmake  burak_reading_targets.cmake  burak_storage.cmake  burak_variables.cmake  burak_variables_misc.cmake  common.cmake  get_version_from_git_tag.cmake  (+4 more)
cmake-tests/: CMakeLists.txt
cmake-tests/bootstrapped_hello/: CMakeLists.txt  source.cpp  targets.cmake
cmake-tests/feature-test/: CMakeLists.txt
cmake-tests/header_consumer/: CMakeLists.txt  consumer.cpp  targets.cmake
cmake-tests/header_lib/: targets.cmake
cmake-tests/test2/: CMakeLists.txt
(+88 files in other folders)
